--- a/aula020519.md
+++ b/aula020519.md
@@ -56,3 +56,11 @@
 - Houve uma **coexistência de caçadores-coletores e agricultores** por 3000 anos na Europa Central. Eles usavam a mesma caverna para sepultamentos, mas embora usassem o mesmo ambiente, não eram o mesmo grupo.
 - Nos **Alpes** (3500 AC) haviam palafitas em lagos, ênfase em pastoreios e assentamentos pequenos.
 - No **Nordeste Europeu** houve pouco desenvolvimento de atividades agrícolas. O pastoreio veio antes da agricultura. Caça, coleta e forrageio foram atividades predominantes por longo tempo após a introdução por grupos de fora. A cerâmica foi introduzida depois e não alterou o estilo de vida deles.
+- Na **Costa Atlântica**, a agricultura começa a chegar, do leste europeu por volta de 4500 AC. As atividades econômicas marítimas permanecem após a influência de grupos agricultores. Nas Ilhas Britânicas, os assentamentos agrícolas começam a surgir a partir de 2000 AC.
+- No **sul de Portugal**, houve uma convivência entre caçadores-coletores e agricultores por molhares de anos. Há uma troca de tecnologia, mas os caçadores-coletores não adotam a agricultura. Já no **vale do rio Muge**, conhecido pels sítios de concheiros, os primeiros assentamentos são de 8000 AP, em 7500 AP se adota a cerâmica e em 7000 AP ocorre um abandono.
+- Na **Escandinávia**, por volta de 4000 AC existem evidências ambíguas da influência da cultura LBK. Eles continuam com suas atividades econômicas após a chegada da agricultura, mas não se sabe se por aculturação ou miscigenação. Lá, a cultura é conhecida como **TBK**, e mantinham animais domésticos, construíam câmeras mortuárias alongadas, recintos cerimoniais circulares e enterramentos nas turfeiras.
+- Existem **duas hipóteses** para a transição da pesca até a agricultura no norte da Europa, desde uma adoção rápida até uma transição gradual. Ela pode ter sido causada por mudanças climáticas.
+- A **chegada dos cereais** ocorreu entre 4000-3700 AC. As **marcas de arado**, em 3700 AC. Nas mesmas épocas, aparecem os animais domesticados, os almofarizes e os machados também.
+- A **expansão das práticas agrícolas** foi rápida, liderada por sociedades agrárias da Europa Central. Os primeiros agricultores da Escandinávia eram **imigrantes do sul** e não caçadores-coletores que de repente viraram agricultores. Possivelmente, eles migraram por causa de pressão demográfica, mudanças climáticas e bons afloramentos de sílex no sul da Escandinávia.
+- A **mineração de sílex** é bem complexa. O sílex está no subterrâneo. Se faziam buracos na terra, com vários andares, para se levar à superfície. Ele era bom para a confecção de ferramentas como o machado. Esses machados não eram só a pedra, tinham uma haste provavelmente de matéria orgânica, que foi decomposta.
+- Os **caçadores-coletores da Escandinávia** aprenderam com os agricultores imigrantes e trocavam materiais com eles.
