Aula de Idade do Ferro e correções na aula de Idade do Bronze

--- a/aula190530.md
+++ b/aula190530.md
@@ -10,7 +10,7 @@
 - A **periodização** da Idade do Bronze existe, mas existem variações regionais. Ela é definida por:
   1. **Idade do Bronze Inicial** (2200-1500 AC): Bronze A1 e A2, cemitérios com inumações, relacionado à cultura Unetice (Rep. Checa).
   2. **Idade do Bronze Média** (1500-1350 AC): Bronze B-C. Enterramentos embaixo de montículos e cultura dos túmulos
-  3. **Idade do Bronze Final** (1350-750 AC): Bronze D. Introdução quase universal de cremeções, cinzas dos mortos colocados em urnas e urnas colocadas em cemitérios. Cultura dos campos de urnas e surgimento de sítios fortificados. A época acaba no Mediterrâneo por volta de 1000 AC e na Escandinávia por volta de 700 AC.
+  3. **Idade do Bronze Final** (1350-750/600 AC): Bronze D. Introdução quase universal de cremeções, cinzas dos mortos colocados em urnas e urnas colocadas em cemitérios. Cultura dos campos de urnas e surgimento de sítios fortificados. A época acaba no Mediterrâneo por volta de 1000 AC e na Escandinávia por volta de 700 AC.
 - Na **Escandinávia**, a era se divide em seis momentos distintos, começando com metais importados da Europa, desenvolvimentos iniciais e finais e transição para a Idade do Ferro.
 
 ## Sociedade
@@ -32,7 +32,7 @@
 - Na Idade do Bronze Média, aumentam-se os **sepultamentos por cremação**, mas ainda existem **sepultamentos por túmulos**.
 - **A Cultura dos Túmulos** (1600-1300 AC) segue às culturas de vasos campaniformes em grande parte da Europa Central. Existe uma equivalência entre *tumulus*, *barrows*, *burial mounds* e *kurgans*. Haviam sepultamentos individuais de indivíduos da elite, e provavelmente, os plebeus não eram sepultados assim.
 - Na Idade do Bronze final, as **cremações tornam-se universais**, dando origem à cultura dos campos de urnas. Datada em 1300-600 AC, se considera um desenvolvimento da cultura dos túmulos. Houve uma transição gradual e lenta para ela.
-- A **cultura dos Campos de Urna** possui ausência de monumentos (que indica uma tentativa de invisibilização dos mortos), assentamentos agrícolas pequenos e casas redondas formando aldeias. A Europa temperada ainda não possuía escrita. São considerados, por alguns autores, precursores dos celtas.
+- A **cultura dos Campos de Urna** possui ausência de monumentos (que indica uma tentativa de invisibilização dos mortos), assentamentos agrícolas pequenos e casas redondas formando aldeias. A Europa temperada ainda não possuía escrita. São considerados, por alguns autores, precursores dos celtas. Paul Reinecke classifica esse período como Hallstatt A (1100-1000 AC) e Hallstatt B (1000 - 800 AC). É um fenômeno pan-europeu.
 - Os corpos eram cremados e colocado **urnas funerárias** que se enterravam em fossas no chão em áreas formais de cemitério. As urnas eram de pedra, em geral. De madeira, só para os membros da elite. Os enterramentos raramente incluíam bens de prestígio, e possuíam no máximo um acompanhamento funerário.
 - As pessoas moravam em **sítios fortificados**, provavelmente para se defender de outros grupos.
 
