--- a/P2.md
+++ b/P2.md
@@ -2,7 +2,7 @@
 
 ## Mesolítico
 
-- O mesolítico aconteceu entre **13K e 9K anos atrás**. Como as últimas geleiras sumiram, o nível do mar subiu e as florestas se expandiram. Com isso, uma série de **mudanças geológicas** aconteceram, possibilitando a colonização de uma série de novos territórios da Europa (Europa central, Escandiávia e Ilhas Britânicas e Mediterrâneas).
+- O mesolítico aconteceu entre **13K e 9K anos atrás**, ou **11K e 7K AC**. Como as últimas geleiras sumiram, o nível do mar subiu e as florestas se expandiram. Com isso, uma série de **mudanças geológicas** aconteceram, possibilitando a colonização de uma série de novos territórios da Europa (Europa central, Escandiávia e Ilhas Britânicas e Mediterrâneas).
 - Essa época é caracterizada por um **explosão no número de sítios**, não só pelo aumento no número de ocupantes mas pela menor degradação dos registros (camadas estratigráficas mais acima, lugares com melhores condições de conservação e com maior probababilidade de serem encontrados).
 - Embora esse período seja considerado um **período de transição**, com seus habitantes sendo denominados "marginais", ele é, na verdade, um período de **conquistas culturais significativas** e **complexidade social cresente**. A intensificação (aumento de calorias por unidade de área), e consequente diversificação (aumento no número de recursos a serem explorados) começam aqui.
 - A maior parte das culturas estudadas pertencem ao **litoral**, enquanto que as **interioranas** são deixadas de lado, a princípio.
@@ -28,3 +28,35 @@
 ### Sítios de concheiros
 
 - As culturas de concheiros (**7K-5K anos atrás**) eram muito comuns pela Europa. Existem concheiros no **Reino Unido** (sítios pequenos), **França** (sítios com sepultamento), **Espanha** (esse associado com o pico asturiense), **Portugal** (sítios com volume grande de depósitos) e na **Dinamarca** (assentamentos ao longo da csta e casas ovais, com a época sendo estimada pelas espécies depositadas).
+
+## Neolítico
+
+- O Neolítico é **datado em 7000-2000 anos AC**. Imediatamente após o Mesolítico e com seu fim misturado com o início da Idade do Cobre.
+- Presença de **cerâmica não indica sedentarismo** (já que pode ser transportada) e **nem agricultura** (já que existe desde o Gravetiense).
+
+### Agricultura
+
+- Atividade que possibilita a obtenção de recursos a partir de **plantas**. Até chegar a ela, são necessários cinco passos: **coleta**, **manejo**, **horticultura**, **domesticação** e **agricultura**.
+- Pode ter surgido por por **mudanças climáticas**, **crescimento demográfico**, **hipótese de zonas marginais** ou por uma **mistura** desses fatores.
+- O **machado polido**, em formado de gota alongado, para desmatamento, é o artefato indicador da agricultura.
+- A agricultura euroariásica vem do conhecido **Crescente Fértil**. Dessa região são nativos: trigo, cevada, cabras e porcos.
+- Uma cultura associada com o nascimento da agricultura é a **Kebara**. Eram caçadores-coletores-pescadores do Levante e costa do Mediterrâneo. Viveram entre 22K-15K AP. Primeiro achado com pilões e almofarizes.
+- Uma outra cultura é a dos **Natufienses** (12K-10K anos antes de Cristo). Sul do Levante, costa oeste do Mediterrâneo e vale do Jordão. Eles são os primeiros que possuem horticultura documentada. Construíam casas circulares. Eram sedentários.
+- Das culturas pré-cerâmica, se destaca a cultura **PPNB**, que construía moradias uma em cima da outra, que acabavam virando morros conhecidos como *Tells*. Animais eram mantidos nas residências, que eram construídas na vertical. Um sítio conhecido desse tipo é o de **Çatalhöyük**, na Turquia.
+- As primeiras culturas neolíticas com cerâmica (**PN - Pottery Neolithic**) viviam exclusivamente da agricultura, consumindo até produtos derivados de animais.
+- Os **cultivados** na Europa eram:
+  - Vegetais: farro, trigo, cevada, lentilhas e leguminosas.
+  - Animais: gado bovino, ovelhas, cabras e porcos.
+- As primeiras explicações para surgimento da agricultura seriam a de uma **onda de migração**. A superioridade da agricultura teria determinado o sucesso. No entanto, sabe-se que esse processo foi irregular, associado a **condições locais**. As espécies achadas na em sítios de agricultura na Europa são domesticadas e introduzidas (de origem exótica).
+- A **interação** com os caçadores-coletores localis do mesolítico é o que determina o caminho de aparição da agriculura em cada local.
+- São três as **situações de adoção** da agricultura.
+  1. Aparição/adoção rápida
+  2. Aparição/adoção gradual
+  3. Pouca influência de práticas agrícolas.
+- O **sudeste europeu** é o primeiro a ter evidências de agricultura. Possuem registros culturais semelhantes aos do Levante (na cerâmica e nas espécies domesticadas). São caçadores-coletores que tornaram-se agricultores por influência dos migrantes da Anatólia. Sua cerâmica é conhecida como *Cardial wore*.
+- A cultura **LBK** (5500-4500 AC), da Europa Central, é uma das mais estudadas desse período. Agricultura baseada em depósito de Loess. Suas casas eram alongadas, e nelas viviam famílias estendidas.
+- Houve uma **coexistência de caçadores-coletores e agricultores** por 3000 anos na Europa Central. Eles usavam a mesma caverna para sepultamentos, mas embora usassem o mesmo ambiente, não eram o mesmo grupo.
+- Na **Costa Altântica**, a agricultura chega a partir do leste, por volta de 4500 AC. As atividades econômicas marítimas permanecem mesmo com a influência agrícola. No **sul de Portugal** os dois grupos conviveram por muito tempo. Mesmo com a convivência, o máximo compartilhado é a tecnologia. Existem **sítios de concheiros** nessa época também.
+- No **Nordeste Europeu** houve pouco desenvolvimento de atividades agrícolas. O pastoreio veio antes da agricultura. Caça, coleta e forrageio foram atividades predominantes por longo tempo após a introdução por grupos de fora. A cerâmica foi introduzida depois e não alterou o estilo de vida deles.
+- A **Escandinávia** fica como região periférica por muito tempo. A cultura LBK leva sua **influência**, mas não se sabe se por aculturação ou por miscigenação. A cultura formada recebe o nome de **TBK**. As hipóteses para adoção da agricultura são a mesmas para o resto da Europa.
+- A **expansão das práticas agrícolas** foi rápida, liderada por sociedades agrárias da Europa Central. Os primeiros agricultores da Escandinávia eram **imigrantes do sul** e não caçadores-coletores que de repente viraram agricultores. Possivelmente, eles migraram por causa de pressão demográfica, mudanças climáticas e bons afloramentos de **sílex** no sul da Escandinávia, minerado para a confecção de machados, por exemplo.
