--- a/P2.md
+++ b/P2.md
@@ -40,6 +40,7 @@
 - Pode ter surgido por por **mudanças climáticas**, **crescimento demográfico**, **hipótese de zonas marginais** ou por uma **mistura** desses fatores.
 - O **machado polido**, em formado de gota alongado, para desmatamento, é o artefato indicador da agricultura.
 - A agricultura euroariásica vem do conhecido **Crescente Fértil**. Dessa região são nativos: trigo, cevada, cabras e porcos.
+- Essa região era o centro dos avanços tecnológicos da época (agricultura, veículos com rodas e etc).
 - Uma cultura associada com o nascimento da agricultura é a **Kebara**. Eram caçadores-coletores-pescadores do Levante e costa do Mediterrâneo. Viveram entre 22K-15K AP. Primeiro achado com pilões e almofarizes.
 - Uma outra cultura é a dos **Natufienses** (12K-10K anos antes de Cristo). Sul do Levante, costa oeste do Mediterrâneo e vale do Jordão. Eles são os primeiros que possuem horticultura documentada. Construíam casas circulares. Eram sedentários.
 - Das culturas pré-cerâmica, se destaca a cultura **PPNB**, que construía moradias uma em cima da outra, que acabavam virando morros conhecidos como *Tells*. Animais eram mantidos nas residências, que eram construídas na vertical. Um sítio conhecido desse tipo é o de **Çatalhöyük**, na Turquia.
@@ -55,8 +56,38 @@
   3. Pouca influência de práticas agrícolas.
 - O **sudeste europeu** é o primeiro a ter evidências de agricultura. Possuem registros culturais semelhantes aos do Levante (na cerâmica e nas espécies domesticadas). São caçadores-coletores que tornaram-se agricultores por influência dos migrantes da Anatólia. Sua cerâmica é conhecida como *Cardial wore*.
 - A cultura **LBK** (5500-4500 AC), da Europa Central, é uma das mais estudadas desse período. Agricultura baseada em depósito de Loess. Suas casas eram alongadas, e nelas viviam famílias estendidas.
+- A **cultura LBK** é relacionada a grupos que habitavam os Bálcãs (Starčevo–Kőrös–Criș) e que migraram para a Europa Central pelo rio Danúbio. Agricultores que eram, seguiram o curso do rio por dois motivos principais: o curso d'água e a quantidade de loess que existe nas margens do rio.
 - Houve uma **coexistência de caçadores-coletores e agricultores** por 3000 anos na Europa Central. Eles usavam a mesma caverna para sepultamentos, mas embora usassem o mesmo ambiente, não eram o mesmo grupo.
 - Na **Costa Altântica**, a agricultura chega a partir do leste, por volta de 4500 AC. As atividades econômicas marítimas permanecem mesmo com a influência agrícola. No **sul de Portugal** os dois grupos conviveram por muito tempo. Mesmo com a convivência, o máximo compartilhado é a tecnologia. Existem **sítios de concheiros** nessa época também.
 - No **Nordeste Europeu** houve pouco desenvolvimento de atividades agrícolas. O pastoreio veio antes da agricultura. Caça, coleta e forrageio foram atividades predominantes por longo tempo após a introdução por grupos de fora. A cerâmica foi introduzida depois e não alterou o estilo de vida deles.
 - A **Escandinávia** fica como região periférica por muito tempo. A cultura LBK leva sua **influência**, mas não se sabe se por aculturação ou por miscigenação. A cultura formada recebe o nome de **TBK**. As hipóteses para adoção da agricultura são a mesmas para o resto da Europa.
+- Os **escandinávios** não possuem tanta ancestralidade de agricultores pois a hibridização foi menor do que na Europa Central (exceção: Lepenski Vir).
 - A **expansão das práticas agrícolas** foi rápida, liderada por sociedades agrárias da Europa Central. Os primeiros agricultores da Escandinávia eram **imigrantes do sul** e não caçadores-coletores que de repente viraram agricultores. Possivelmente, eles migraram por causa de pressão demográfica, mudanças climáticas e bons afloramentos de **sílex** no sul da Escandinávia, minerado para a confecção de machados, por exemplo.
+
+### Redes de troca
+
+- As elites da Mesopotâmia possuíam uma demanda por **produtos exóticos**. Tal demanda fez surgir redes de troca, que traziam para elas conchas de Spondylus sp. e matérias primas como sílex, obsidiana e jadeita.
+- As mesmas redes de troca foram responsáveis por levar a tecnologia do Oriente Médio para a Europa. Elas se expandiram bastante por volta de 3K-2K anos atrás.
+- A **obsidiana** ocorre desde o Mediterrâneo. O **Sílex** bandeado vem desde a Polônia e da costa Atlântica. Já a **jadeita** tem suas maiores fontes no oeste dos Alpes, na Itália.
+
+### Culturas regionais
+
+- A **chegada dos agricultores** proporcionou uma fusão com as populações nativas. Isso levou ao desenvolvimento de culturas regionais. Todas se conheciam e não havia mais caçadores-coletores (o estilo de vida desapareceu).
+- O **processo de desenvolvimento** de culturas não foi homogêneo, o que gerou regionalismos, mesmo com áres de culturas semelhantes (como os monumentos monolíticos da costa atlântica e túmulos mortuários no leste europeu). Cada área tinha seu caráter distintivo.
+- A **diversidade** existente ofereceu novas oportunidades para contatos intergrupais e surgimento de identidades de grupos. Essas identidades se refletem como novos monumentos e novos artefatos: domínio do fogo; invenção da roda e dos veículos (simultaneamente no sudoeste asiático, por volta de 3500 AC); domestificação do cavalo (por volta de 4800 AC); e ovelhas lanudas.
+A **domesticação do cavalo** aconteceu porque ele era usado para transporte (carga e pessoas), guerra, trabalho e ritual. A região com registro mais antigo é a estepe pôntico-cáspia (4800 AC), em sociedades de pastores. Eles possuiam gado, ovelhas e cabras domesticadas.
+- Sabe-se que há uma domesticação pela **dieta** (menos diversificada e com intersecção com dieta humana) e pelo **esqueleto** (isótopos no osso e tamanho, já que domésticos costumam ser menores). Além disso, existe uma variedade de **acessórios** que são usados nos cavalos, como sela, arreio e ferradura, que deixam marcas no animal que podem ser estudadas.
+- No sudeste da **Bulgária** existiam *tells*. Na **Romênia**, havia cerâmica e casas de madeira, que assim como os *tells* eram destruídas, no caso, queimadas.
+
+### Megalistismo
+
+- O **megalitismo europeu** (5000-4500 AC) aconteceu no litoral atlântico da Europa (do sudoeste de Portugal até o sul da Suécia, incluindo Grã-Bretanha e Irlanda). Enterramentos coletivos em câmaras construídas com grandes pedras.
+- Foi um fenômeno que se desenvolveu a partir de **grupos do atlântico**. - O megalitismo no **mar Báltico** e no **mar do Norte** são diferentes dos atlânticos, embora associados a eles.
+- Os **mais antigos** se conhecem como tumbas de passagem/corredor, sempre próximas à costa, em Portugal. Se expandiram para a Europa, onde ficaram conhecidas como tumbas de galeria.
+- São **tipos** de megalitos:
+  1. *Dolmens*: tumbas de portal.
+  2. *Menhires*: se erguem pedras isoladas.
+  3. *Cairns*: são agrupamentos de pedras no alto de montanhas.
+  4. *Túmulos*: tumbas de passagem/corredor e galeria. Ás vezes combinados com terra.
+  5. *Arranjos circulares*: uma combinação dos anteriores, como Stonehenge.
+- Além do já citado Stonehenge, sítios de destaque são Brú na Bóinne e Carnac (Irlanda).
