Estudando idade do cobre

--- a/aula190516.md
+++ b/aula190516.md
@@ -2,7 +2,7 @@
 
 - Datada em 3300-1200 AC.
 - O **uso do cobre** tinha um apelo estético, inferido porque os primeiros instrumentos feitos com esse material não eram superiores aos feitos em ossos, pedra e madeira.
-- Sua obtenção vem a partir de minerais como a Azurita e
+- Sua obtenção vem a partir de minerais como a Azurita.
 - O cobre começa a ser trabalhado na região da **Anatólia**, e depois se espalha para a Europa.
 - Um dos sítios mais conhecidos dessa era é o **sítio de Varna**, na Bulgária, datado em 4500-4400 AC. É um cemitério com mais de 300 pessoas, mas se estima que eram 3-4 sepultamentos por ano. Isso é uma evidência clara de sociedades não igualitárias, já que mais da metade tinha acompanhamento funerário. 18 deles eram ricos e 61 enterramentos com objetos de ouro.
 - Haviam **diferenças** de gêneros nos túmulos, com mais mobiliário funerário nos sepultamentos masculinos. Interpretado como sociedades de *"Big Men"*. A evidência para isso é um sepultamento elaborado de um homem de 40-50 anos com mais de 1000 objetos de ouro. Acredita-se que nesses cemitérios eram enterrados só os ricos e seus dependentes, e nenhum plebeu ou escravo, podendo ser até um cemitério supra-regional.
