--- a/P2.md
+++ b/P2.md
@@ -91,3 +91,61 @@ A **domesticação do cavalo** aconteceu porque ele era usado para transporte (c
   4. *Túmulos*: tumbas de passagem/corredor e galeria. Ás vezes combinados com terra.
   5. *Arranjos circulares*: uma combinação dos anteriores, como Stonehenge.
 - Além do já citado Stonehenge, sítios de destaque são Brú na Bóinne e Carnac (Irlanda).
+
+
+## Idade do Cobre
+
+- Datada em **3300-1200 AC**. O material começa a ser trabalhado apenas pelo seu **apelo estético**, já que não era melhor que outros produtos.
+- Sua obtenção vem de **minerais** como a Azurita. Como a agricultura, o trabalho com o Cobre **vem da Anatólia em direção à Europa**.
+
+### Sepultamento de sociedades baseadas em classes
+
+- Um dos sítios mais conhecidos dessa era é o **sítio de Varna**, na Bulgária, datado em 4500-4400 AC. Ele é um cemitério com diversos sepultamentos. No entanto, os funerais eram feitos em anos diferentes e poucos tinham acompanhamento funerário.
+- Além das diferenças entre classes, havia entre **sexos**. Existe mais mobiliário funerário nos sepultamentos masculinos.
+- Interpretado como sociedades de ***"Big Men"***. A evidência para isso é um sepultamento elaborado de um homem de 40-50 anos com mais de 1000 objetos de ouro. Acredita-se que nesses cemitérios eram enterrados só os ricos e seus dependentes, e nenhum plebeu ou escravo, podendo ser até um cemitério supra-regional.
+
+### Chegada do Cobre à Europa
+
+- Outro sítio associado a essa idade é o **sítio de Belovode** (5000 AC), na Sérvia. Possui as mais antigas evidências de fusão de cobre a altas temperaturas, Tem restos de escória de cobre, minerado na região. O cobre era provavelmente fundido em fornos cavados na terra.
+- A **Escandinávia** era a única região da Europa não habitada por agricultores. Entre 3500-3000 AC existe uma descontinuidade no registro arqueológico. Pesquisadores apontam ser o fim do Neolítico.
+- **Grandes assentamentos** são destruídos ou abandonados e dão lugares a numerosos montículos funerários, por volta de 3300-3100 AC.
+- Essas mudanças podem ser explicadas por:
+  1. **Migrações**: pessoas que chegaram de longe e mudaram o registro arqueológico.
+  2. **Mudanças iniciadas localmente**: os próprios habitantes evoluíram seu jeito de viver.
+- De acordo com **Marija Gimbutas**, as sociedades matriarcais e pacíficas foram substituídas por culturas patriarcais e guerreiras, conhecidas como *Corded Ware*, *Globular Amphora* e *Bell Beaker*.
+- Todas essas são culturas **paleoeuropeias**. Existe uma superposiçção na Europa Central com mais de 300 anos de coexistência.
+
+#### Cultura *Corded Ware* - Cerâmica de Cordas
+
+- Predomina na **Europa Central e do Leste**. Existem poucos dados sobre economia e padrão de assentamentos (provavelmente porque eles eram **nômades**). A maioria dos sítios são **enterramentos**. Muitos dos achados eram machados. Associada com a cultura Kurgan, da Rússia.
+- Datada em (3100-2000 AC), sua cerâmica era decorada com **detalhes de cordas**.
+- O registro mais antigo dessa cultura está nos **Cárpatos**. Várias culturas são associadas com elas.
+- A **subsistência** era baseadas em gados, ovelhas, cabras, porcos e cavalos, já que eram sociedades **pastores**. A eles, foi associado um alto nível de violência, maior do que os das sociedades antigas.
+- Sua cultura material é muito parecida co a ***Pit-grave culture***, associada a grupos **Yamnaya**. Ambos tem montículos funerários, cerâmica com direção de cordas, machados de guerra e sepultamentos com ocre vermelho. Os Yamnaya eram mais móveis e violentos.
+- **Diferenças de gênero**: as mulheres eram deitadas do lado esquerdo e os homens deitados do lado direito. Os sepultamentos masculinos eram acompanhados de machados e pontas de flechas.
+- A **chegada do indo-europeu** é explicada por quatro modelos:
+  1. **Modelo Báltico-Pôntico**: Proto-indo-europeu data do Mesolítico e se distribuiu do Mar Báltico ao Mar Negro, assumindo que os LBK já falavam uma língua indo-europeia, herdada de grupos caçadores-coletores, vinda de uma expansão norte-sul. Esse modelo não se sustenta pois os LBK eram da Anatólia.
+  2. **Modelo da Anatólia**: Dispersão do indo-europeu na Europa se associa com a dispersão dos primeiros agricultores desde a Anatólia. Assume que os LBK já falavam o proto-indo-europeu.
+  3. **Modelo dos 3 estágios de aculturação**: Dispersão desde a Anatólia e assimilação gradual do idioma por parte dos caçadores coletores.
+  4. **Modelo Pôntico-Cáspio**: Origem do indo-europeu nas estepes ao norte e nordeste do Cáucaso entre 4500-3000 AC. A dispersão após 3300 AC dos grupos de cerâmica *pit-grave* foi favorecida pelo uso de veículos e cavalos. Associado a cultura *Corded Ware*. **MAIS ACEITO**
+- **Migração única dos agricultores** desde o noroeste da Anatólia até o Sudeste Europeu. Expansão pelo Mediterâneo e pelo Danúbio até o norte e oeste da Europa sem mistura com os caçadores-coletores (exceto nos Bálcãs e Iron Gates).
+
+#### Cultura *Bell Beaker* - Vasos Campaniformes
+
+- Datada em 2800-2000AC. Existem no **centro e no oeste europeu, e leste do mediterrâneo**. Como chegam mais tarde à Europa Central, sugere-se que seu surgimento tenha se dado no oeste europeu.
+- Contribuíram com o **desenvolvimento da metalurgia do cobre e do bronze** na Europa. Sua expansão foi rápida.
+- Os **vasos** têm formato campaniforme, com adagas de cobre, pontas de flecha e botões com perfuração em forma de V.
+- As **evidências genéticas** sobre ele dizem que haveria uma mistura de dois processos para explicar sua origem. Se mostra tanto uma hibridação de pessoas com agricultores anteriores quanto com os *Corded Wares*.
+- Provavelmente, uma **continuidade cultural** e genética com quem fazia os megalitos. Logo, seriam um desenvolvimento local, sem migrações.
+
+#### Cultura das Ânforas Globulares
+
+- Datada em 3100-2600 AC.
+- Vivem na Europa **Central** e partes da Europa do **Leste**.
+- **Decoração variada** das cerâmicas, com incisões, impressões e pinturas.
+- **Subsistência** baseada em agricultura e criação de gado.
+- Seriam o resultado da **segunda migração** do lete europeu.
+
+### Aparição dos veículos sobre rodas
+
+- Estimada em 3500-3000 AC. Produto de um **desenvolvimento socioeconômico** de grande escala. As evidências mais antigas são de 3500-3400 AC, em Flintbek, na Alemanha e em Bronocice, no sul da Polônia.
