--- a/P2.md
+++ b/P2.md
@@ -149,3 +149,69 @@ A **domesticação do cavalo** aconteceu porque ele era usado para transporte (c
 ### Aparição dos veículos sobre rodas
 
 - Estimada em 3500-3000 AC. Produto de um **desenvolvimento socioeconômico** de grande escala. As evidências mais antigas são de 3500-3400 AC, em Flintbek, na Alemanha e em Bronocice, no sul da Polônia.
+
+## Idade do Bronze
+
+- É um **termo variável**, uma vez que não possui início nem fim definidos com exatidão. É uma época muito importante em **desenvolvimento**, e o **metal é uma parte menor** desse período.
+- É um período **intermediário** entre sociedades agrícolas pequenas e sociedades do tipo estado. O **Mediterrâneo** é importante para entender essa era, pois é onde várias noções surgem para explicar o futuro que estava por vir.
+- O Bronze é a **mistura** entre cobre (Cu) e Estanho (Sn). Começa a ser trabalhado primeiro no oeste europeu, onde o estanho possui fontes mais abundantes e fáceis de achar. A primeira evidência de Bronze se encontra na Grã-Bretanha e na Irlanda, por volta de 2200-2000AC.
+
+### Periodização
+
+- A **periodização** da Idade do Bronze existe, mas existem variações regionais. Ela é definida por:
+  1. **Idade do Bronze Inicial** (2200-1500 AC): Bronze A1 e A2, cemitérios com inumações, relacionado à cultura Unetice (Rep. Checa).
+  2. **Idade do Bronze Média** (1500-1350 AC): Bronze B-C. Enterramentos embaixo de montículos e cultura dos túmulos
+  3. **Idade do Bronze Final** (1350-750/600 AC): Bronze D. Introdução quase universal de cremeções, cinzas dos mortos colocados em urnas e urnas colocadas em cemitérios. Cultura dos campos de urnas e surgimento de sítios fortificados. A época acaba no Mediterrâneo por volta de 1000 AC e na Escandinávia por volta de 700 AC.
+- Na **Escandinávia**, a era se divide em seis momentos distintos, começando com metais importados da Europa, desenvolvimentos iniciais e finais e transição para a Idade do Ferro.
+
+### Sociedade
+
+- A sociedade possuía uma economia **agropecuária** (baseada em cereais, leguminosas e criação de gado). As aldeias eram **maiores** e **mais complexas**, com uma diversidade arquitetônica maior. As sociedades tornam-se mais **hierarquizadas**, e surge uma elite que possui demandas parecida com as do Oriente Médio. Aumentam as celebrações, possivelmente por um desenvolvimento de religiões. As **redes de troca** continuam a evoluir.
+
+### Consolidação das hierarquias
+
+- As sociedades almejavam a obtenção e o consumo de **bens de prestígio**. Como alguns sepultamentos possuíam um **mobiliário funerário** muito rico (no caso, os masculinos), é indicada uma sociedade organizada.
+- A **teoria Centro-Periferia** (Wallerstain) pode ser aplicada na Idade do Bronze, com duas situações possíveis para o centro: na primeira, ele seria o Egeu; na segunda, diversos poderes espalhados pela Europa. A periferia seria todo o resto da Europa.
+- As redes de cerâmica prezavam por materiais como **Âmbar**, **Lápis-lazúli** (do Afeganistão), **cerâmicas**, **lingotes de estanho** e **artefatos de bronze**.
+
+### Rituais funerários
+
+- Na **Idade do Bronze Inicial** predominavam os sepultamentos embaixos de **montículos** no norte e no oeste da Europa.
+- Na **Idade do Bronze Média**, aumentam-se os **sepultamentos por cremação**, mas ainda existem **sepultamentos por túmulos**.
+  - A **Cultura dos Túmulos** segue às culturas campaniformes em grande parte da Europa. Os sepultamentos eram individuais para membros da elite. Não se sabe o que acontecia com os plebeus.
+- Na **Idade do Bronze Final**, as **cremações tornam-se universais**, dando origem à cultura dos campos de urnas.
+  - A **cultura dos Campos de Urna** possui ausência de monumentos (que indica uma tentativa de invisibilização dos mortos), assentamentos agrícolas pequenos e casas redondas formando aldeias. Os corpos eram cremados e colocados em urnas depositadas em pequenas fossas. Os materiais variavam dependendo da classe. Raramente, eles possuíam acompanhamento funerário. Os **sítios fortificados** tornam-se mais comuns.
+
+### As culturas escandinavas
+
+- A época era conhecida como **Idade das Adagas** e foi datada em 2700-2300AC. Havia uma imitação das adagas dos *Bell Beakers*, que eram colocadas em enterramentos masculinos. Vale lembrar que durante toda a pré-história, a **Escandinária era periferia** da Europa, tanto que existe um **salto** do Neolítico para a Idade do Bronze.
+- Como havia uma **ausência de fontes** de metais preciosos, as **redes de troca** tiveram um papel fundamental.
+- **Cultura de túmulos e montículos**: As elites eram enterradas em montículos. Uma prática comum era a de **sepultamentos coletivos em barcos** de madeira. Essa iconografia dos barcos remete a um **culto ao Sol**.
+- **Sepultamentos relevantes** incluem um homem com capa e gorro preservados e uma garota com braceletes e cinturão com disco feitos de bronze.
+
+## Idade do Ferro
+
+- - **Datada em 700/600-140 AC**. O início **não é drástico** porque ela não começou de maneira homogênea no continente. Como as fontes de ferro são **mais numerosas e presentes** na Europa, isso fez com que o controle das matérias-primas ficasse **menos restrito**, e isso mudou as hierarquias de poder. As redes de troca **diminuem** e poderes locais se desenvolvem.
+- A fusão do ferro demanda **temperaturas mais altas** (>1000ºC) de fusão do que o cobre. As novas **pirotecnologias** possibilitaram a fabricação de contas de vidro de uma maneira mais generalizadas.
+
+### Cronologia
+
+- A Idade do Ferro também possui sua própria cronologia: **Hallstatt C** (800-600 AC), **Hallstatt D** (600-450 AC), **La Têne A** (500-400 AC), **La Têne B** (400-275 AC) e **La Têne C** (150AC até a conquista romana). Nenhuma dessas culturas chegou ao Mediterrâneo.
+
+### As culturas Hallstatt e o comércio do sal
+
+- O sal é obtido no mar (costa inglesa e costa francesa) ou nos **alpes Austríacos**. O sal era um **produto valioso**, por ajudar a conservar alimentos e amaciar peles. Ele quem definiu a hierarquia dessa época, uma vez que era **raro e de difícil obtenção**, enquanto o ferro era comum.
+- O sítio mais importante dessa época é o **sítio de Hallstatt** (Áustria). É um sítio com **sepultamentos** (e cremações) e com evidências de **mineração**.
+- O método de mineração utilizao era o **seco**: usado no Neolítico, Idade do Bronze e Idade do Ferro. As pedras eram quebradas e levadas para fora, para trabalho posterior.
+- Uma fossa próxima à mina possui diversos restos animais, provavelmente porque era onde o processamento dessas partes era feito.
+- Muito foi escavado por **J. G. Ramsauer**, por 20 anos do século XIX. Foram descobertos 980 sepultamentos. Existe um registro exaustivo dos achados, incluindo aquarelas dos sepultamentos, planos do cemitério com localização de cada enterro, tabelas com quantificações dos achados e etc. O Museu de História de Viena fez mais ecavações nesse local, na década de 1960. Se estimam 5000-6000 inumações nesse vale.
+- **Sepultamentos importantes**: um "príncipe" com 126 plebeus enterrados à sua volta e um sepultamento junto com uma carroça.
+
+### A cultura La Têne e os Celtas
+
+- Foi a última cultura **pan-europeia** da pré-história. Concentrada no oeste europeu e nas ilhas Britânicas, possuiam um estilo artístico possivelmente derivado de Hallstatt D.
+- Os **celtas** eram o povo da cultura La Têne. Se encontram na Europa central, norte da Itália, Bálcãs, Grécia e Anatólia. Toda a sua descrição foi feita pelos **romanos** e pelos **gregos**, seus inimigos.
+- Foram **descritos** centros permanentes, de grande escala, produção artesanal para exportação, muralhas e portas e localizações estratégicas.
+- A **visão dos celtas** sobre eles mesmos era diferente. Existe a visão contemporânea (Asterix & Obelix), dos gregos (estátuas clássicas com barba) e a própria (faces aplainadas com barba, monocelha desenhada em curva).
+- A sociedade deles era **dividida** em nobres (sem um controle centralizado do poder), druidas (sábios) e o povo. A **ordem social** era mantida através de festins para os guerreiros.
+- **Sepultamentos importantes**: o sepultamento de **Vix**. Era uma urna em estilo mediterrâneo, enterrado com uma mulher.
